# wealth

./: .gitignore  db.sqlite3  pyproject.toml  render.yaml
staticfiles/text/: Stock_data.csv  scrips.CSV  string.txt
stock/: admin.py  data.py  forms.py  models.py  urls.py  utils.py  views.py
stock/migrations/: 0001_initial.py  0002_auto_20220206_0944.py  0003_corpactionrecord.py  0004_auto_20220208_2135.py  0005_userphone.py  0006_auto_20220210_1819.py  0007_auto_20220210_1831.py  0008_auto_20220210_1847.py  0009_coaction_remarks.py  0010_auto_20220211_1713.py  0011_userphone_agreement.py  0012_auto_20220213_0835.py  0013_scandata.py  0014_alter_corpactionrecord_record_date.py  0015_alter_corpactionrecord_message.py
stock/static/text/: Equity.csv
stock/templatetags/: custom_tags.py
templates/stock/: action_list.html  add_stock.html  base.html  coaction_list.html  home.html  login.html  modaljs.html  privacy_policy.html  recommendation.html  stock_chart.html  terms_of_service.html
wealth/: settings.py  urls.py
