[tool.poetry]
name = "wealth"
version = "0.1.0"
description = "stock wealth"
authors = ["rajesitb <56825534+rajesitb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
dj-database-url = "0.5.0"
django-crispy-forms = "1.12.0"
django-widget-tweaks = "1.4.8"
Django = "3.2.12"
gunicorn = "^20.1.0"
weasyprint = "52.5"
whitenoise = {extras = ["brotli"], version = "^6.0.0"}
psycopg2 = "2.9.1"
redis = "^4.2.1"
numpy = "1.19.4"
pandas = "1.2.1"
Telethon = "^1.24.0"
scipy = "1.6.0"
requests = "^2.27.1"
timeloop = "^1.0.2"
bsedata = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
